# FanControl

./: Cargo.toml  README.md  build.rs
src/: client.rs  ipc.rs  lib.rs  main.rs  server.rs  strategies.rs  utils.rs
