[package]
name = "FanControl"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features=["derive", "unstable-doc"] }
bincode = "1.3.3"
serde = { version = "1.0.148", features=["derive"]}

[build-dependencies]
shellexpand = "2.1"

