[package]
name = "FanControl"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features=["derive", "unstable-doc"] }
bincode = "1.3.3"
serde = { version = "1.0.148", features=["derive"]}
serde_json = "1.0.89"
log = "0.4.17"
pretty_env_logger = "0.4.0"
nix = "0.26.1"

[build-dependencies]
shellexpand = "3.0.0"

